--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <img src="a8ff2740-bcc4-47c8-9a05-3cb9513cc29f.jpg" alt="" />
       </div>
       <p>
-        Hello! I'm Thanh, 20 years old, passionate about reading, traveling, and
-        cooking, I'm looking for a companion to share life's joys with.
+        Hey there! I’m Thanh, 20 — a curious soul passionate about technology, music, sports, and gaming. I’m always up for new experiences and find peace in nature.
       </p>
     </section>
 
@@ -44,14 +43,14 @@
           </tr>
           <tr>
             <td>Occupation</td>
-            <td>Software Engineer</td>
+            <td>Game Developer</td>
           </tr>
           <tr>
             <td rowspan="2">Hobbies</td>
-            <td>Reading, listening to music</td>
+            <td>Gaming, Listening to music</td>
           </tr>
           <tr>
-            <td>Traveling, cooking</td>
+            <td>Sports, Traveling</td>
           </tr>
         </tbody>
 
@@ -68,16 +67,61 @@
       </audio>
     </section>
 
-    <section id="Additional content">
+    <section id="AdditionalContent">
       <h3>Additional Content</h3>
-      <p>Hà Nội có vô số nơi tuyệt vời để hẹn hò – đây là những địa điểm tôi muốn cùng bạn khám phá 🍰</p>
+      <p>Hanoi has countless lovely spots for a date – these are the places I’d love to explore with you 🍰</p>
+          <p><iframe width="560" height="315" src="https://www.youtube.com/embed/XJ45msOsdaI?si=W1WJIWEs4bKpGynu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p> <p class="PlacetoDate">Hanoi Cathedral</p>
+          <p><iframe width="560" height="315" src="https://www.youtube.com/embed/cxZin7sThfY?si=6LGxpuIhnosjd_BJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p> <p class="PlacetoDate">Hanoi Book Street</p>
+    </section>
 
-      <ul>
-        <li>Nhà thờ Lớn
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/XJ45msOsdaI?si=W1WJIWEs4bKpGynu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </li>
-        <li>Phố sách Hà Nội
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/cxZin7sThfY?si=6LGxpuIhnosjd_BJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </li>
-      </ul>
+    <section id="FindAMatch">
+        <h3>💞 Find Your Match</h3>
+        <form action="Thankyou.html" method="get">
+          <fieldset>
+            <legend>Your Information</legend>
+            <label>Name:</label>
+              <input type="text" name="name" required><br>
+            <label>Email:</label>
+              <input type="email"name="email" required><br>
+            <label>Password:</label>
+              <input type="password" name="password" required><br>
+          </fieldset>
+
+          <fieldset>
+            <legend>Desired Partner</legend>
+            
+            <label>Gender:</label>
+            <input type="radio" name="gender" value="male"> Male
+            <input type="radio" name="gender" value="female"> Female <br>
+            
+            <label>Hobbies:</label>
+            <input type="radio" name="hobbies" value="travel"> Travel
+            <input type="radio" name="hobbies" value="music"> Music
+            <input type="radio" name="hobbies" value="sports"> Sports <br>
+
+             <label>Country:</label>
+            <select>
+              <option>Vietnam</option>
+              <option>Japan</option>
+              <option>Korea</option>
+              <option>USA</option>
+            </select><br>
+
+            <label>Desired Occupation:</label>
+            <input list="occupations" name="occupation">
+            <datalist id="occupations">
+              <option value="Engineer">
+              <option value="Designer">
+              <option value="Teacher">
+              <option value="Artist">
+            </datalist><br>
+
+            <label>Message:</label>
+            <textarea rows="4" cols="30"></textarea><br>
+
+            <button type="submit">Submit Information</button>
+          </fieldset>
+        </form>
       </section>
+  </body>
+</html>
