--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <section id="FindAMatch">
         <h3>💞 Find Your Match</h3>
-        <form action="https://tranthanhdh6-tech.github.io/thankyou/" method="post">
+        <form action="https://tranthanhdh6-tech.github.io/thankyou/" method="get">
           <fieldset>
             <legend>Your Information</legend>
             <label>Name:</label>
@@ -125,4 +125,5 @@
       </section>
   </body>
 </html>
+
 
