--- a/Thankyou.html
+++ b/Thankyou.html
@@ -7,10 +7,8 @@
 </head>
 <body style="text-align: center;font-family: sans-serif;margin-top: 100px;">
     <h1>Thank You</h1>
-  <h2>💌 Thank you for your submission!</h2>
-  <p>We’ll get in touch with you very soon 😉</p>
-  <a href="assignment2.html">⬅ Return to Homepage</a>
-</body>
-</html>
+  <h2>💌 Cảm ơn bạn đã gửi thông tin!</h2>
+  <p>Chúng tôi sẽ sớm liên hệ lại sớm với bạn 😉</p>
+  <a href="https://tranthanhdh6-tech.github.io/ass2/">⬅ Quay lại trang chính</a>
 </body>
 </html>
